fix z-index issue with error tooltips

--- a/cdap-ui/app/features/adapters/adapters.less
+++ b/cdap-ui/app/features/adapters/adapters.less
@@ -13,7 +13,7 @@ body.theme-cdap {
     .adapter-name {
       position: absolute;
       left: 167px;
-      z-index: 1029;
+      z-index: 1019;
       > div {
         background-color: white;
         cursor: pointer;
